--- a/application/admin/view/system/basic.html
+++ b/application/admin/view/system/basic.html
@@ -57,6 +57,8 @@
 					</div>
 				</div>
 			</div>
+			<div class="tabCon">
+			</div>
 		</div>
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
