--- a/application/admin/view/goods/add_goods.html
+++ b/application/admin/view/goods/add_goods.html
@@ -31,7 +31,13 @@
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" {if condition="isset($info)"}value="{$info.name}"{/if} placeholder="商品名称" id="" name="name">
 			</div>
-		</div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>描述</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" {if condition="isset($info)"}value="{$info.desc}"{/if} placeholder="商品描述" id="" name="desc">
+            </div>
+        </div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>商品分类：</label>
 			<div class="formControls col-xs-8 col-sm-9"> 
