后台基本设置2

--- a/application/admin/view/system/basic.html
+++ b/application/admin/view/system/basic.html
@@ -1,7 +1,7 @@
 ﻿{include file="layout/setting_head"}
 <div class="page-container">
 	<form class="form form-horizontal" id="form-article-add">
-		<input type="hidden" name="inc_type" value="{$url}">
+		<input type="hidden" name="type" value="{$url}">
 		<div id="tab-system" class="HuiTab">
 			<div class="tabBar cl">
 				{foreach name="list" item="vo"}
