--- a/application/admin/view/article/index.html
+++ b/application/admin/view/article/index.html
@@ -3,13 +3,13 @@
 {include file='layout/head' /}
 <body>
 	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 文章管理 <span
-			class="c-gray en">&gt;</span> 文章分类列表 <a class="btn btn-success radius r replace"
+			class="c-gray en">&gt;</span> 文章列表 <a class="btn btn-success radius r replace"
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
 		<form method="GET" action="">
-		<div class="text-c"> 文章分类名称：
-			<input type="text" class="input-text" style="width:250px" placeholder="输入文章分类名称" value="{$keywords}" name="keywords">
+		<div class="text-c"> 文章标题：
+			<input type="text" class="input-text" style="width:250px" placeholder="输入文章标题名称" value="{$keywords}" name="keywords">
 			<button type="submit" class="btn btn-success" id="" name="">
 				<i class="Hui-iconfont">&#xe665;</i>
 				搜索</button>
@@ -17,21 +17,23 @@
 		</form>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
 			<span class="l">
-                 <a href="javascript:;" onclick="category_add('添加文章分类','{:url('admin/article/add_article')}','1200','800')" class="btn btn-primary radius">
+                 <a href="javascript:;" onclick="category_add('添加文章','{:url('admin/article/add_article')}','1200','800')" class="btn btn-primary radius">
                     <i class="Hui-iconfont">&#xe600;</i> 
-                    添加文章分类
+                    添加文章
                 </a>
             </span> 
             <span class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
-					<th scope="col" colspan="9">文章分类列表</th>
+					<th scope="col" colspan="9">文章列表</th>
 				</tr>
 				<tr class="text-c">
                     <th width="40">ID</th>
-                    <th width="150">分类名称</th>
-					<th width="150">上级分类</th>
+                    <th width="150">标题</th>
+                    <th width="150">分类</th>
+                    <th width="150">作者</th>
+                    <th width="150">来源</th>
 					<th width="150">状态</th>
 					<th width="130">更新时间</th>
 					<th width="100">操作</th>
