修改后台商品图片上传方法 为 后台公共图片上传方法

--- a/application/admin/view/goods/add_goods.html
+++ b/application/admin/view/goods/add_goods.html
@@ -215,8 +215,9 @@
 		</div>
 	</form>
 </div>
-<form id="hide-form" style="display:none;" target="ajaxR" enctype="multipart/form-data" method="POST" action="/admin/goods/upload_images">
+<form id="hide-form" style="display:none;" target="ajaxR" enctype="multipart/form-data" method="POST" action="/admin/system/upload_images">
     <input id="hide-form-file" type="file" name="image" value="" >
+    <input id="hide-form-file" type="text" name="module" value="goods" >
 </form>
 <iframe name="ajaxR" style="display:none;"></iframe>
 <iframe name="ajaxR-from" style="display:none;"></iframe>
@@ -283,6 +284,8 @@
             if(size > 5){
                 $('#add-goods-image').remove();
             }
+        }else{
+            layer.msg('图片上传失败！');
         }
     }
 
